Finish `create_csv` function

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
   "user_email" : "user@example.com",
-  "keywords" : ["phonology", "syntax", "semantics"],
+  "keywords" : ["pokemon", "numbers"],
   "authors" : ["noam chomsky", "jeffrey heinz"]
 }
