--- a/config.json
+++ b/config.json
@@ -1,5 +1,4 @@
 {
   "user_email" : "user@example.com",
-  "keywords" : ["pokemon", "numbers"],
-  "authors" : ["noam chomsky", "jeffrey heinz"]
+  "keywords" : ["pokemon", "numbers"]
 }
