--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
+numpy==1.19.2
+rake_nltk==1.0.4
 pandas==1.1.4
 requests==2.24.0
-rake_nltk==1.0.4
-numpy==1.19.2
+nltk==3.5
 beautifulsoup4==4.9.3
 scikit_learn==0.23.2
